assets/css/style.css
/* Import chosen Google Fonts */
@import url('https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&family=Raleway:wght@200&display=swap');


* {
    margin: 0;
    padding: 0;
    border: none;
}
body {
    /* image sourced from Freepik: https://www.freepik.com/free-vector/wild-animal-cartoon-character-forest-scene_14801768.htm#query=cartoon%20jungle&position=49&from_view=search&track=ais */
    background-image: url("../images/jungle.jpg");
    background-size: cover;
    background-attachment: fixed;
    font-family: 'Love Ya Like A Sister', cursive;
}
/* logo and title will always site at top within the header and 
it will be determined by the width setting thereby reducing in size
as the screen sizes changes. */
.logo-and-title {
    border-radius: 10px;
    margin: auto;
    padding: 10px 0;
    width: 25%;
}

.logo-and-title > img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        overflow: hidden;
}

/* section with blurred effect background for in game how to play instructions and game outcome message. */
#blurred-div {
    display: flex;
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    position: absolute;
    top: 0;
    left: 0;
    width:100%;
    height: 100%;
    /* 
    Issue on Safari and iPhone where feedback and game outcome animations were obscured by the cards. Problem lies with
    z indices being reset on transform. Found solution on Stack Overflow:
    https://stackoverflow.com/questions/22621544/webkit-transform-breaks-z-index-on-safari
    */
    transform: translateZ(1000px);
    z-index: 2;
    visibility: hidden;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}
/* instructions div which is initially hidden and will be made
visible when the How To Play button is selected */
#instructions {
    height: 55vmax;
    width: 40%;
    background-color: #E9D358;
    border-radius: 10px;
    border: 3px solid #1B316D;
    visibility: hidden;
}

#instructions h2 {
    font-size:  3vmax;
    text-align: center;
    margin: 2vmax 0;
}

#instructions ol {
    padding-left: 2.5vmax;
    margin-bottom: 0;
    font-size: 1.75vmax;
    line-height: 3vmax;
}
/* The game outcome star which appears in an animated fashion 
on completion of the game. */
#game-outcome {
    text-align: center;
    color: #E9D358;
    font-size: 25rem;
    position: relative;
    top: -35%;
    display: none;
    animation-name: outcome-zoom;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
    transform: translateZ(1000px);
    z-index: 100;
}
@keyframes outcome-zoom {
    from {
        z-index: 98;
        transform: scale(0)
    }
    to {
        z-index: 99;
        transform: scale(2);
    }
}
#game-outcome p{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateY(-50%) translateX(-50%);
    text-align: center;
    color: #1B316D;
    font-size: 2.2rem;
}
/* game section containing all of the divs essential to the game */
#game-section{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    height: 650px;
}
/* game area which contains the game grid and is formatted to 
give an embossed effect*/
#game-area {
    flex-grow:2;
    width: 100%;
    height: 100%;
    background-color: #1B316D;
    border-radius: 10px;
/* Creating an embossed effect - solution from Stack Overflow: https://stackoverflow.com/questions/24744776/creating-bevel-effect-for-content-box */
    box-shadow: inset 5px 5px 8px 1px rgba(255,255,255,0.5), inset -3px -7px 5px 2px rgba(32,52,108,0.5);
    display: flex;
    justify-content: center;
    align-items: center;
}

/* Game Control divs class for standard formatting of the divs with 
the confetti colour scheme. 
Flex set up with assistance from this tutorial: 
https://css-tricks.com/snippets/css/a-guide-to-flexbox/ */
.game-control-divs{
    flex-grow: 1;
    width: 30%;
    margin: 0 2%;
    background-color: #E9D358;
    border-radius: 10px;
    box-shadow: inset 5px 5px 8px 1px rgba(255,255,255,0.5), inset -3px -7px 5px 2px rgba(32,52,108,0.5);
}

.game-control-divs h2{
   margin: 1.5vmax 5px;
   font-size: 3vmax;
}

.game-control-divs h3{
    margin: 1vmax 5px;
    font-size: 2vmax;
 }
/* game info containing welcome message and New Game and How t
 */
#game-info{
    display: flex;
    flex-direction: column;
    height:37.5vmax;
    text-align: center;
    font-size: 2vmax;
    justify-content: center;
    align-items: center;
}

#game-info p{
    flex: 1 auto;
    margin: 0.5vmax  5px;
    font-size: 1.25vmax;
}
#game-info-buttons{
    margin-bottom: 10px;
}
button {
    font-size: 1.75vmax;
    width: 70%;
    font-weight: bold;
    color: #BADDE9;
    background-color: #1B316D;
    border-radius: 5px;
    margin: 1vmax 10px;
    padding: 10px;
    font-family: 'Raleway', sans-serif;
    box-shadow: 0 2px 2px rgba(0,0,0,0.7), inset 3px 3px 3px 0 rgba(255,255,255,0.7), inset -3px -3px 3px 0 rgba(255,255,255,0.5);
}

button:hover {
    opacity: 0.9;
}
#main-new-game-button {
    font-size: 1.7vmax;
    width: 70%;
}
#how-to-play-button {
    font-size: 1.25vmax;
    width: 60%;
    margin-top: 0.65vmax;
}

#go-back-button {
    font-size: 1.25vmax;
    width: 40%;
    margin-left: 30%
}

#how-to-play-start-button {
    width: 60%;
    margin-left: 20%;
}

#new-game-button {
    position: absolute;
    top: 52%;
    left: 47%;
    font-size: 1vmax;
    width: 25%;
    transform: translateY(-50%) translateX(-50%);
    display: none;
}

#game-status-div{
    width: 75%;
    margin-bottom: 30px;
    height: 17.5vmax;
    text-align: center;
    font-size: 3vmax;
    background-color: #1B316D;
    color: #BADDE9;
}
#game-status-div p{
    margin: 4px;
}
#game-status-div span{
    color: #E9D358;
    font-size: 5vmax;
    font-weight: bold;
}
/* ... */

